k3s/manifests/traefik/traefik.deemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: traefik
spec:
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: traefik
          image: traefik:v3.1
          args:
            - --api.insecure=true
            - --providers.kubernetesCRD
            - --providers.kubernetesCRD.allowCrossNamespace=true
            - --entrypoints.web.address=:8982
            - --entrypoints.web.http.redirections.entryPoint.to=websecure
            - --entrypoints.web.http.redirections.entryPoint.scheme=https
            - --entrypoints.web.http.redirections.entryPoint.permanent=true
            - --entrypoints.websecure.address=:8988
            - --serversTransport.insecureSkipVerify=true
            - --certificatesresolvers.default.acme.tlschallenge=false
            - --certificatesresolvers.default.acme.dnschallenge.provider=cloudflare
            - --certificatesresolvers.default.acme.dnschallenge.delaybeforecheck=0
            - --certificatesresolvers.default.acme.email=admin@manosriram.com
            - --certificatesresolvers.default.acme.storage=/letsencrypt/acme.json
          ports:
            - name: web
              containerPort: 80
              # hostPort: 8080
            - name: websecure
              containerPort: 443
              # hostPort: 8443
            - name: admin
              containerPort: 8080
          volumeMounts:
            - name: letsencrypt
              mountPath: /letsencrypt
      volumes:
        - name: letsencrypt
          hostPath:
            path: /opt/traefik/letsencrypt
            type: DirectoryOrCreate
