k3s/manifests/traefik/traefik.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - name: web
      port: 80
      targetPort: 8982
    - name: websecure
      port: 443
      targetPort: 8988
    - name: admin
      port: 8080
      targetPort: 8080
